tests/specs/ClassExtends.txt
# mod.ts
export class Class extends Object {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class Class extends Object {}
  | ^

# output.txt
Defined in file:///mod.ts:1:1

class Class extends Object



# output.json
[
  {
    "kind": "class",
    "name": "Class",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "classDef": {
      "isAbstract": false,
      "constructors": [],
      "properties": [],
      "indexSignatures": [],
      "methods": [],
      "extends": "Object",
      "implements": [],
      "typeParams": [],
      "superTypeParams": []
    }
  }
]
